--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -26,9 +26,9 @@
                   <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="you@example.com">
                   </div>
                 </div>
-                <div id="mce-responses">
-                  <div class="ui hidden response" id="mce-error-response"></div>
-                  <div class="ui hidden response" id="mce-success-response"></div>
+                <div>
+                  <div class="ui hidden"></div>
+                  <div class="ui hidden"></div>
                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div class="ui hidden" aria-hidden="true"><input type="text" name="b_a6a22369cc2b356379cf789ca_a85a83a5a5" tabindex="-1" value=""></div>
                 <div><input class="ui button" type="submit" value="{% trans 'Subscribe' %}" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
@@ -36,7 +36,7 @@
             </form>
           </div>
       </div>
-      <div class="column column-about">
+      <div class="column">
         <h4>{% trans 'Get Involved' %}</h4>
 
         <ul>
@@ -58,7 +58,7 @@
         </ul>
 
       </div>
-      <div class="column column-rtd">
+      <div class="column">
         <h4>{% trans 'Business Info' %}</h4>
 
         <ul>
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <div class="ui two column grid items container social">
+    <div class="ui two column grid items container">
       <div class="column item">
       <a class="ui right floated" href="https://github.com/rtfd/readthedocs.org" rel="noopener noreferrer"><i class="github icon"></i></a>
       </div>
