--- a/readthedocsext/theme/templates/projects/project_dashboard_base.html
+++ b/readthedocsext/theme/templates/projects/project_dashboard_base.html
@@ -12,7 +12,7 @@
   {% url "socialaccount_connections" as social_accounts %}
 
   <!-- BEGIN your projects list -->
-  <div class="ui grid stackable" id="dashboard">
+  <div class="ui very padded grid stackable" id="dashboard">
     <div class="twelve wide computer sixteen wide tablet sixteen wide mobile column">
       {% if project_list %}
 
