--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -6,28 +6,28 @@
 {% for provider in socialaccount_providers %}
   {% if provider.id == "openid" %}
     {% for brand in provider.get_brands %}
-      <li>
+      <div class="item">
         <a title="{{ brand.name }}"
-           class="socialaccount-provider {{ provider.id }} {{ brand.id }} button"
+           class="ui button {{ provider.id }} {{ brand.id }} button"
            href="{% provider_login_url provider.id openid=brand.openid_url process=process next=next %}"
            >
            {% blocktrans trimmed with brand_name=brand.name verbiage=verbiage|default:'Connect to' %}
              {{ verbiage }} {{ brand_name }}
            {% endblocktrans %}
         </a>
-      </li>
+      </div>
     {% endfor %}
   {% endif %}
   {% if provider.id != 'bitbucket' %}
-    <li>
+    <div  class="item">
       <a title="{{ provider.name }}"
-         class="socialaccount-provider ui button"
+         class="ui button"
          href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params next=next %}"
          > <i class="icon {{ provider.name|lower }}"></i>
          {% blocktrans trimmed with provider_name=provider.name verbiage=verbiage|default:'Connect to' %}
            {{ verbiage }} {{ provider_name }}
          {% endblocktrans %}
       </a>
-    </li>
+    </div>
   {% endif %}
 {% endfor %}
