--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -10,13 +10,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="icon" type="image/png" href="{% static 'corporate/img/favicon.png' %}" />
     {# New stylesheet #}
-
+    <!-- Website Font -->
+    <link rel="stylesheet" href="https://use.typekit.net/omm0eld.css">
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'readthedocsext/theme/site.css' %}" />
     {% comment %} 
       Line below is for webpack-dev-server. Comment line when commiting
     {% endcomment %}
     {% comment %} <link rel="stylesheet" href="http://localhost:8080/static/site.css"> {% endcomment %}
-
+    
     {% block extra_links %}{% endblock %}
 
     <meta name="viewport" content="width=device-width" />
@@ -59,13 +60,15 @@ var $ = jQuery = require('jquery');
 
     {# TODO remove this and use the base-ng theme as the default #}
     {% block content-wrapper %}
-        <div class="ui container">
+        <div class="ui very padded container">
 
           <!-- BEGIN notify -->
           {% if messages %}
             <ul class="notifications">
               {% for message in messages %}
-                <li class="ui red message notification notification-{{ message.level }}" {% if message.pk %}data-dismiss-url="{% url 'message_mark_read' message.pk %}"{% endif %}>
+                <li class="ui warning message message-{{ message.level }}" {% if message.pk %}data-dismiss-url="{% url 'message_mark_read' message.pk %}"{% endif %}>
+                    <i class="close icon"></i>
+                    <div class="header">Notification</div>
                   {{ message }}
                 </li>
               {% endfor %}
