--- a/src/css/config.less
+++ b/src/css/config.less
@@ -4,3 +4,6 @@
 // Site is in transition from old themes to this theme. This adds temorary
 // rules that refer to elements that will be removed after transition.
 @in_transition: true;
+
+@headerFont: soleil, sans-serif;
+@bodyFont: soleil, sans-serif;
