--- a/readthedocsext/theme/templates/profiles/private/edit_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/edit_profile.html
@@ -11,6 +11,6 @@
 {% block edit_content %}
   <form method="POST" action=".">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" name="submit" value="{% trans "OK, save it!" %}" id="submit"/>
+    <input class="ui primary button" type="submit" name="submit" value="{% trans "OK, save it!" %}" id="submit"/>
   </form>
 {% endblock %}
