--- a/src/css/components/sui_defaults.less
+++ b/src/css/components/sui_defaults.less
@@ -8,7 +8,7 @@ input {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   text-align: left;
   line-height: 1.21428571em;
-  font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: soleil, sans-serif;
   padding: .58035714em .875em;
   background: #fff;
   border: 1px solid rgba(34, 36, 38, .15);
@@ -19,7 +19,7 @@ input {
 }
 
 form input[type=text] {
-  font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: soleil, sans-serif;
   margin: 0;
   outline: none;
   width: 100%;
@@ -82,7 +82,7 @@ input[type="submit"] {
   vertical-align: baseline;
   background: #e0e1e2 none;
   color: rgba(0, 0, 0, .6);
-  font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: soleil, sans-serif;
   margin: 0 .25em 1em 0;
   padding: .6875em 1.5em;
   text-transform: none;
