--- a/readthedocsext/theme/templates/core/badge_markup.html
+++ b/readthedocsext/theme/templates/core/badge_markup.html
@@ -1,4 +1,4 @@
-<div id="badge_markup" class="ui hidden badge">
+<div class="ui hidden badge">
   <ul>
     <li class="rst">
       <h4>reStructuredText</h4>
