--- a/readthedocsext/theme/templates/account/email.html
+++ b/readthedocsext/theme/templates/account/email.html
@@ -12,30 +12,30 @@
   {% if user.emailaddress_set.all %}
     <p>{% trans "The following email addresses are associated with your account:" %}</p>
 
-    <form action="{% url 'account_email' %}" class="email_list" method="post">
+    <form action="{% url 'account_email' %}" class="ui form" method="post">
       {% csrf_token %}
-      <fieldset class="ui segment>
+      <fieldset class="ui segment">
 
         {% for emailaddress in user.emailaddress_set.all %}
-          <div class="ctrlHolder">
+          <div class="field">
             <label for="email_radio_{{ forloop.counter }}" class="{% if emailaddress.primary %}primary_email{%endif%}">
               <input id="email_radio_{{ forloop.counter }}" type="radio" name="email" {% if emailaddress.primary %}checked="checked"{%endif %} value="{{ emailaddress.email }}"/>
 
               {{ emailaddress.email }}
                 {% if emailaddress.verified %}
-                  <span class="verified">{% trans "Verified" %}</span>
+                  <span class="ui positive message">{% trans "Verified" %}</span>
                 {% else %}
-                  <span class="unverified">{% trans "Unverified" %}</span>
+                  <span class="ui message">{% trans "Unverified" %}</span>
                 {% endif %}
-                {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
+                {% if emailaddress.primary %}<span>{% trans "Primary" %}</span>{% endif %}
             </label>
           </div>
         {% endfor %}
 
-        <div class="buttonHolder">
-          <button class="ui secondary button" type="submit" name="action_primary" >{% trans "Make Primary" %}</button>
+        <div>
+          <button class="ui secondary button" type="submit" name="action_primary" >{% trans "Make Primary" %}</button> 
           <button class="ui secondary button" type="submit" name="action_send" >{% trans "Re-send Verification" %}</button>
-          <button class="ui primary button" type="submit" name="action_remove" >{% trans "Remove" %}</button>
+          <button class="ui button" type="submit" name="action_remove" >{% trans "Remove" %}</button>
         </div>
 
       </fieldset>
@@ -49,7 +49,7 @@
 
   <h2>{% trans "Add E-mail Address" %}</h2>
 
-  <form method="post" action="{% url 'account_email' %}" class="add_email">
+  <form method="post" action="{% url 'account_email' %}" class="ui form">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="ui primary button" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
