--- a/readthedocsext/theme/templates/core/project_bar_base.html
+++ b/readthedocsext/theme/templates/core/project_bar_base.html
@@ -4,7 +4,7 @@
 {% load gravatar %}
 
 <!-- BEGIN project bar -->
-<div id="project_bar" class="project-bar">
+<div class="ui secondary segment attached">
   <div class="ui container">
 
     {% if project.has_good_build %}
@@ -13,19 +13,15 @@
       </div>
     {% endif %}
 
-    <div class="project-title">
-      <h1>
-        <span class="project-breadcrumb quiet">
+    <div class="ui basic segment">
           {% block project-breadcrumb %}
             <a href="{% url "projects_dashboard" %}">{% trans "Projects" %}</a>&nbsp;&gt;
           {% endblock %}
           <br>
-        </span>
-        <a href="{{ project.get_absolute_url }}">{{ project }}</a>
-      </h1>
+        <span class="ui huge header"><a href="{{ project.get_absolute_url }}">{{ project }}</a></span>
     </div>
 
-    <div class="options">
+    <div class="ui basic segment">
 
     {% if project.skip %}
       <p class="build-failure">
@@ -37,27 +33,27 @@
       </p>
       <br>
     {% endif %}
-      <ul>
-        <li><a class="ui button {{ overview_active }}" href="{{ project.get_absolute_url }}">{% trans "Overview" %}</a></li>
+      <div class="ui horizontal list">
+        <div class="item"><a class="ui button {{ overview_active }}" href="{{ project.get_absolute_url }}">{% trans "Overview" %}</a></div>
 
-        <li><a class="ui button {{ downloads_active }}" href="{% url "project_downloads" project.slug %}" rel="nofollow,noindex">{% trans "Downloads" %}</a></li>
+        <div class="item"><a class="ui button {{ downloads_active }}" href="{% url "project_downloads" project.slug %}" rel="nofollow,noindex">{% trans "Downloads" %}</a></div>
 
-        <li><a class="ui button {{ search_active }}" href="{% url "elastic_project_search" project.slug %}" rel="nofollow,noindex">{% trans "Search" %}</a></li>
+        <div class="item"><a class="ui button {{ search_active }}" href="{% url "elastic_project_search" project.slug %}" rel="nofollow,noindex">{% trans "Search" %}</a></div>
 
-        <li><a class="ui button {{ builds_active }}" href="{{ project.get_builds_url }}">{% trans "Builds" %}</a></li>
+        <div class="item"><a class="ui button {{ builds_active }}" href="{{ project.get_builds_url }}">{% trans "Builds" %}</a></div>
 
-        <li><a class="ui button {{ versions_active }}" href="{% url "project_version_list" project.slug %}">{% trans "Versions" %}</a></li>
+        <div class="item"><a class="ui button {{ versions_active }}" href="{% url "project_version_list" project.slug %}">{% trans "Versions" %}</a></div>
 
         {% comment %}
         {% if request.user.is_authenticated %}
-        <li class="{{ tools_active }}"><a href="{% url 'project_embed' project.slug %}">{% trans "Tools" %}</a></li>
+        <div class="item {{ tools_active }}"><a href="{% url 'project_embed' project.slug %}">{% trans "Tools" %}</a></div>
         {% endif %}
         {% endcomment %}
 
         {% if request.user|is_admin:project %}
-          <li><a class="ui button {{ edit_active }}" href="{% url "projects_edit" project.slug %}"><i class="gear"></i>{% trans "Admin" %}</a></li>
+          <div class="item"><a class="ui button {{ edit_active }}" href="{% url "projects_edit" project.slug %}"><i class="gear"></i>{% trans "Admin" %}</a></div>
         {% endif %}
-      </ul>
+      </div>
     </div>
 
 
